# fairdrop-linera

./: .gitignore  README-sm.md  README.md
auction/src/: contract.rs  lib.rs  service.rs  state.rs
frontend/: .env.example  README.md  index.html  next.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app-pages/active-auction/: index.tsx
frontend/app-pages/auction-detail/: index.tsx
frontend/app-pages/auction-detail-dashboard/: index.tsx
frontend/app-pages/create-auction/: index.tsx
frontend/app-pages/faucet/: index.tsx
frontend/app-pages/my-auctions/: index.tsx
frontend/app-pages/settled-auction/: index.tsx
frontend/app/(public)/: layout.tsx
frontend/app/active-auction/: page.tsx
frontend/app/auction-detail/: page.tsx
frontend/app/create-auction/: page.tsx
frontend/app/example/: page.tsx
frontend/app/faucet/: page.tsx
frontend/app/my/: page.tsx
frontend/app/my-auctions/: page.tsx
frontend/app/settled-auction/: page.tsx
frontend/components/auction/: auction-card-actions.tsx  auction-card-countdown.tsx  auction-card-image.tsx  auction-card-price.tsx  auction-card-stats.tsx  (+9 more)
frontend/config/: app.config.ts  app.route.ts  app.token-store.ts
frontend/hooks/: index.ts  useAuctionMutations.ts  useAuctionNotifications.ts  useCachedActiveAuctions.ts  useCachedAllMyCommitments.ts  useCachedAuctionSummary.ts  useCachedAuctionsByCreator.ts  useCachedBidHistory.ts  useCachedMyBids.ts  useCachedMyCommitment.ts  useCachedSettledAuctions.ts  useFungibleMutation.ts  useFungibleQuery.ts
frontend/providers/: eager-loader.tsx  index.tsx  indexer.tsx  linera.tsx  sync-provider.tsx
frontend/src/: App.tsx  index.css
frontend/store/: auction-store.ts  token-store.ts  ui-store.ts
fungible/src/: state.rs
indexer/src/: contract.rs  lib.rs  service.rs  state.rs
shared/: Cargo.toml
shared/src/: events.rs  lib.rs  messages.rs  types.rs
smart-contract/: Cargo.toml
smart-contract/auction/: Cargo.toml
smart-contract/auction/src/: contract.rs  lib.rs  service.rs  state.rs
smart-contract/fungible/: Cargo.toml
smart-contract/fungible/src/: contract.rs  lib.rs  service.rs  state.rs
smart-contract/indexer/: Cargo.toml
smart-contract/indexer/src/: contract.rs  lib.rs  service.rs  state.rs
smart-contract/shared/src/: events.rs  lib.rs  messages.rs  types.rs  utils.rs
(+113 files in other folders)
