[workspace]
resolver = "2"
members = [
    "shared",
    "auction",
    "indexer",
]

[workspace.package]
version = "0.1.0"
authors = ["Fairdrop Team"]
edition = "2021"
repository = "https://github.com/your-repo/fairdrop"
license = "Apache-2.0"

[workspace.dependencies]
# Linera SDK
linera-sdk = "0.15.4"

# Async/GraphQL
async-graphql = "7.0"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Other
thiserror = "2.0"
