[package]
name = "fungible"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-graphql.workspace = true
async-trait.workspace = true
linera-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fungible_contract"
path = "src/contract.rs"

[[bin]]
name = "fungible_service"
path = "src/service.rs"
