[package]
name = "indexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-graphql.workspace = true
async-trait.workspace = true
linera-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Local dependencies
shared = { path = "../shared" }
auction = { path = "../auction" }  # Need this to reference AuctionAbi

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "indexer-contract"
path = "src/contract.rs"

[[bin]]
name = "indexer-service"
path = "src/service.rs"
